small spacing fix

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -82,8 +82,8 @@ li {
   font-family: var(--text-font);
   font-size: var(--text-size);
   font-weight: 400;
-  line-height: 1.5em;
-  letter-spacing: -0.5px;
+  line-height: 1.65em;
+  letter-spacing: -0.25px;
 }
 
 p {
